# mcpy-lens

./: BRANCH_CLEANUP_SUMMARY.md  DEPLOYMENT_GUIDE.md  GRADIO_FIX_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  README.md  STAGE_3_COMPLETION_SUMMARY.md  STAGE_4_COMPLETION_SUMMARY.md  STAGE_5_COMPLETION_SUMMARY.md  STAGE_6_COMPLETION_SUMMARY.md  STAGE_7_GRADIO_IMPLEMENTATION_SUMMARY.md  launch_gradio.py  playwright.config.py  pyproject.toml  requirements.txt  run.py  run_frontend_tests.py  run_gradio.py  run_unit_tests.py  simple_gradio_test.py  start_server.py  test_app_creation.py  test_components.py  test_fixed_app.py  test_frontend_setup.py  test_gradio_minimal.py  test_gradio_setup.py  test_stage3_completion.py  validate_stage1.py  verify_stage3_implementation.py
docs/: README.md  api.md  architecture.md  development.md  modules.md
issues/: 2025-06-04-tool-discovery-linting-issues.md
plans/: 2024-12-19-fix-function-selection-ui.md  2024-12-19-fix-script-dropdown-refresh.md  2024-12-19-frontend-playwright-testing.md  2025-06-03-master-implementation-plan.md  2025-06-03-stage-1-core-infrastructure.md  2025-06-03-stage-2-file-upload-management.md  2025-06-03-stage-3-tool-discovery.md  2025-06-03-stage-4-wrapper-implementation.md  2025-06-03-stage-5-adapter-implementation.md  2025-06-03-stage-6-dynamic-service-registration.md  2025-06-03-stage-7-web-interface.md  2025-06-03-stage-8-testing-integration.md  2025-06-04-stage-3-corrected-implementation.md  2025-06-04-stage-3-tool-discovery-completion.md  2025-06-04-tool-discovery-linting-issues.md  2025-06-05-stage-3-implementation-corrections.md  STAGE_4_IMPLEMENTATION_PLAN.md
tests/: __init__.py  test_adapter_cache_manager.py  test_adapter_config.py  test_adapter_session_manager.py  test_stage1_validation.py  test_stage4_implementation.py  test_stage5_adapter_implementation.py  (+3 more)
(+65 files in other folders)
